// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkTableRow should render correctly 1`] = `
<DocumentFragment>
  <tr>
    <td />
  </tr>
</DocumentFragment>
`;

exports[`BpkTableRow should render correctly with arbitrary props 1`] = `
<DocumentFragment>
  <tr
    data-foo="bar"
    id="my-custom-id"
  >
    <td />
  </tr>
</DocumentFragment>
`;

exports[`BpkTableRow should render correctly with custom class 1`] = `
<DocumentFragment>
  <tr
    class="my-custom-class"
  >
    <td />
  </tr>
</DocumentFragment>
`;
